fix jumping on load slick

--- a/css/magic-v1.css
+++ b/css/magic-v1.css
@@ -15842,6 +15842,10 @@ img[src="#"] {
 
 /* magicbox inside slider */
 
+[data-slider] [data-magicbox]{
+  display: none;
+}
+
 .grid [data-slider] .slick-list{
   height: 100%;
 }
